# linux_syscall_api

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  test.yml
src/: api.rs  syscall.rs
src/syscall_fs/: mod.rs
src/syscall_fs/ctype/: epoll.rs  pipe.rs
src/syscall_fs/imp/: io.rs  poll.rs
src/syscall_mem/: mod.rs
src/syscall_task/: mod.rs
src/syscall_task/imp/: futex.rs  schedule.rs  task.rs
